# eventsource

./: .gitignore  LICENSE  eventsource.cabal  eventstore.cabal  people.pgsql  store.cabal  store.pgsql  timings.txt
app/: Main.hs
src/: Aggregate.hs  Api.hs  EventSourcing.hs  Query.hs  Request.hs  Version.hs  Webservice.hs
src/Datastore/: CQRS.hs  Command.hs  Event.hs  EventStream.hs  Persist.hs  Query.hs  Request.hs  Store.hs  Types.hs
src/Datastore/Aggregates/: GenericEntity.hs  Participant.hs  Person.hs  TrainingProgram.hs
src/Datastore/CQRS/: Command.hs  Query.hs
src/Datastore/CQRS/Command/: Internal.hs
src/Datastore/CQRS/Query/: Internal.hs
src/Datastore/Command/: Internal.hs
src/Datastore/CommandQueue/: Commands.hs
src/Datastore/Commands/: TrainingProgram.hs
src/Datastore/Queries/: TrainingProgram.hs
src/Datastore/Query/: Internal.hs
src/EventSource/: Aggregate.hs  EventStream.hs  Store.hs
src/EventSource/PostgreSQL/: Store.hs
src/EventStore/: Aggregate.hs  PostgreSQL.hs  Version.hs
src/EventStore/PostgreSQL/: CQRS.hs  Store.hs
src/EventStore/PostgreSQL/Internal/: Cache.hs  Command.hs  CommandQueue.hs  Delta.hs  EventStream.hs  Snapshot.hs  Store.hs  Types.hs  Watch.hs
src/Eventstore/: Aggregate.hs  PostgreSQL.hs  Version.hs
src/Eventstore/PostgreSQL/Internal/: Cache.hs  CommandQueue.hs  Delta.hs  EventStream.hs  Query.hs  Snapshot.hs  Store.hs  Types.hs
src/People/: Person.hs
src/Person/: Person.hs
src/Webservice/: Api.hs  Server.hs
