name:                eventstore
version:             0.1.0.0
synopsis:
description:         Please see README.md
homepage:
license:             AllRightsReserved
license-file:        LICENSE
author:              Shaun Sharples
maintainer:          shaun.sharples@gmail.com
copyright:           2016 Mpowered
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Datastore.Aggregates.GenericEntity
                       Datastore.Aggregates.Person
                       Datastore.Aggregates.Participant
                       Datastore.Aggregates.TrainingProgram
                       Datastore.Commands.TrainingProgram
                       Datastore.Queries.TrainingProgram
                       Eventstore.Aggregate
                       Eventstore.Version
                       Eventstore.PostgreSQL
                       Eventstore.PostgreSQL.CQRS
                       Eventstore.PostgreSQL.Internal.Cache
                       Eventstore.PostgreSQL.Internal.Command
                       Eventstore.PostgreSQL.Internal.CommandQueue
                       Eventstore.PostgreSQL.Internal.Delta
                       Eventstore.PostgreSQL.Internal.EventStream
                       Eventstore.PostgreSQL.Internal.Query
                       Eventstore.PostgreSQL.Internal.Snapshot
                       Eventstore.PostgreSQL.Internal.Store
                       Eventstore.PostgreSQL.Internal.Types
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , containers
                     , either
                     , haxl
                     , hashable
                     , monad-logger
                     , opaleye
                     , product-profunctors
                     , profunctors
                     , postgresql-simple
                     , resourcet
                     , resource-pool
                     , servant
                     , servant-server
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , wai
                     , warp
  default-language:    Haskell2010

executable eventstore-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , async
                     , haxl
                     , opaleye
                     , postgresql-simple
                     , resource-pool
                     , eventstore
                     , text
                     , unordered-containers

                     , aeson
                     , transformers
  default-language:    Haskell2010

-- test-suite store-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , store
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--   default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/mpowered/store
