name:                store
version:             0.1.0.0
synopsis:            Mpowered Store API
description:         Please see README.md
homepage:            http://github.com/mpowered/store#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Shaun Sharples
maintainer:          shaun.sharples@gmail.com
copyright:           2016 Mpowered
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                       Query
                       People.Person
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , haxl
                     , hashable
                     , opaleye
                     , product-profunctors
                     , profunctors
                     , postgresql-simple
                     , resource-pool
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010

executable store-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , haxl
                     , opaleye
                     , postgresql-simple
                     , resource-pool
                     , store
                     , text
  default-language:    Haskell2010

test-suite store-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , store
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mpowered/store
